--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -23,7 +24,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "ldapjs": "^2.2.3",
+    "ldapjs": "^2.3.1",
     "lodash": "^4.17.20",
     "mariadb": "^2.5.2",
     "md5": "^2.3.0",
