--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ HOST_SWAGGER=localhost:9000
 SERVICE_HOST=http://localhost:9000
 NODE_ENV=development
 JWT_SECRET=qFidVu8i0{ramWFO,bw8?Am?R36l,Y0Asn^/4F|D))#uP-]X~?ac30flR[cwgum
+JWT_SECRET_REFRESH=W,8<Dx1|dcGjNa}(<jkfB6B&lyw0+cwM:+A3V"AW`("o-ea[@N+/6~4LS^F6((0
 SECRET_KEY_CODE=k1>e>4O#{W*v/:<Q,`~Eg.^p3@OB;ak.@hu1K(E.Aqnl>s%7w0Jk4<k?v{f%fcJ
+EXPIRES_IN=30m
 
 DB_USERNAME_DEV=hrSystemAdmin
 DB_PASSWORD_DEV=4Dm!n2020@Interset
