--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.4.0",
     "sequelize-auto": "^0.7.7",
+    "shapefile": "^0.6.6",
     "socket.io": "^3.1.0",
     "swagger-generator-express": "^2.1.1",
     "tedious": "^9.2.3",
