--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.2.1",
     "express-paginate": "^1.0.2",
     "express-validator": "^6.9.2",
+    "geojson2shp": "^0.4.0",
     "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -42,6 +43,7 @@
     "sequelize": "^6.4.0",
     "sequelize-auto": "^0.7.7",
     "shapefile": "^0.6.6",
+    "shp-write": "^0.3.2",
     "socket.io": "^3.1.0",
     "swagger-generator-express": "^2.1.1",
     "tedious": "^9.2.3",
