--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "<node_internals>/**"
             ],
             "restart": true,
-            "program": "${workspaceFolder}/bin/www"
+            "program": "${workspaceFolder}/bin/64B"
         }
     ]
 }
