--- a/.env
+++ b/.env
@@ -34,11 +34,11 @@ LDAP_HOST_DEV=pretty-hub.com
 LDAP_URL_DEV=ldap://103.80.51.83
 LDAP_SEARCH_DEV=dc=pretty-hub,dc=com
 
-LDAP_HOST_TEST=pretty-hub.com
-LDAP_URL_TEST=ldap://103.80.51.83
-LDAP_SEARCH_TEST=dc=pretty-hub,dc=com
+LDAP_HOST_TEST=ptt.corp
+LDAP_URL_TEST=ldap://ptt.corp
+LDAP_SEARCH_TEST=dc=ptt,dc=corp
 
-LDAP_HOST_PROD=pretty-hub.com
-LDAP_URL_PROD=ldap://103.80.51.83
-LDAP_SEARCH_PROD=dc=pretty-hub,dc=com
+LDAP_HOST_PROD=ptt.corp
+LDAP_URL_PROD=ldap://ptt.corp
+LDAP_SEARCH_PROD=dc=ptt,dc=corp
 
