--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "up-models_": "sequelize-auto -o './models' -d pttlandmap_db -h 103.253.72.178 -u hrSystemAdmin -p 5432 -x 4Dm!n2020@Interset -e postgres"
   },
   "dependencies": {
+    "activedirectory": "^0.7.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
