--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "up-models_": "sequelize-auto -o './models' -d pttlandmap_db -h 103.253.72.178 -u hrSystemAdmin -p 5432 -x 4Dm!n2020@Interset -e postgres"
   },
   "dependencies": {
+    "@tmcw/togeojson": "^4.5.0",
     "activedirectory": "^0.7.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
@@ -27,6 +28,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "kmz-geojson": "^0.1.0",
     "ldapjs": "^2.3.1",
     "lodash": "^4.17.20",
     "mariadb": "^2.5.2",
@@ -38,6 +40,7 @@
     "mysql2": "^2.2.5",
     "node-cmd": "^4.0.0",
     "node-cron": "^2.0.3",
+    "parse2-kmz": "^1.0.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
@@ -50,7 +53,8 @@
     "socket.io": "^3.1.0",
     "swagger-generator-express": "^2.1.1",
     "tedious": "^9.2.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "verrazzano": "^2.2.3"
   },
   "devDependencies": {
     "faker": "^5.1.0",
