--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "express-paginate": "^1.0.2",
     "express-validator": "^6.9.2",
     "geojson2shp": "^0.4.0",
-    "gtran-kml": "^1.4.5",
     "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -41,6 +40,7 @@
     "mysql2": "^2.2.5",
     "node-cmd": "^4.0.0",
     "node-cron": "^2.0.3",
+    "parse-kml": "^1.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
