--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ DB_PORT_PROD=5432
 DB_DIALECT_PROD=postgres
 
 USER_NAME_AD=580054
-PASSWORD_AD=200192xA
+PASSWORD_AD=200192xA!!
 
 LDAP_HOST_DEV=pretty-hub.com
 LDAP_URL_DEV=ldap://103.80.51.83
