--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon ./bin/ptt",
     "openpm2": "pm2 start ./bin/ptt -i max",
     "up-models": "sequelize-auto -o './models' -d pttlandmap_db -h 10.224.166.39 -u postgres -p 5432 -x Interset@1234 -e postgres",
-    "up-models_": "sequelize-auto -o './models' -d pttlandmap_db -h 103.253.72.178 -u hrSystemAdmin -p 5432 -x 4Dm!n2020@Interset -e postgres"
+    "up-models-product": "sequelize-auto -o './models' -d pttlandmap_db -h 10.224.165.28 -u postgres -p 5432 -x Interset@1234 -e postgres"
   },
   "dependencies": {
     "@timedata/geojson2shp-utf8": "^0.3.2",
