--- a/.env
+++ b/.env
@@ -31,7 +31,11 @@ DB_PORT_PROD=5432
 DB_DIALECT_PROD=postgres
 
 USER_NAME_AD=580054
-PASSWORD_AD=200192xA!!
+PASSWORD_AD=200192yA!!
+
+#LDAP_HOST_DEV=pretty-hub.com
+#LDAP_URL_DEV=ldap://103.80.51.83
+#LDAP_SEARCH_DEV=dc=pretty-hub,dc=com
 
 LDAP_HOST_DEV=pretty-hub.com
 LDAP_URL_DEV=ldap://103.80.51.83
